# kratix-python

./: .gitignore  CHANGELOG.md  Makefile  RELEASING.md  Readme.md  kratix_sdk.html  kratix_sdk.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  search.js
.github/: dependabot.yml
.github/workflows/: docs.yaml  publish.yaml  release.yaml  test.yaml
docs/templates/: module.html.jinja2
example/deployment/: Dockerfile
examples/deployment/: Dockerfile  configure.py  promise.yaml  request.yaml
examples/postgres/: README.md  example-resource.yaml  promise.yaml
examples/postgres/workflows/resource/configure/database-configure/kratix-demo-resource-pipeline/scripts/: pipeline.py
kratix_sdk/: __init__.py  kratix_sdk.py  promise.py  resource.py  status.py  types.py  utils.py
rc/: index.html  kratix_sdk.html  search.js
system/assets/: example-resource.yaml  promise.yaml
system/assets/workflow/: Dockerfile  configure.py
tests/: conftest.py  test_destination_selectors.py  test_kratix_sdk.py  test_outputs.py  test_resource_and_promise.py  test_status.py
tests/assets/: destination_selectors.yaml  object.yaml  status.yaml  updated-status.yaml
tests/assets/promise/: object.yaml
