[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kratix-sdk"
version = "0.2.0"
description = "Kratix SDK for writing Promises workflows"
readme = "Readme.md"
license = "Apache-2.0"
homepage = "https://github.com/syntasso/kratix-python"
repository = "https://github.com/syntasso/kratix-python"
packages = [{include = "kratix_sdk"}]

[tool.poetry.dependencies]
python = ">=3.9"
kubernetes = ">=33.0.0,<35"
PyYAML = ">=6.0.0,<7"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
ruff = "0.13.3"
pdoc = "^15"