[project]
name = "kratix-sdk"
version = "0.4.0"
description = "Kratix SDK for writing Promises workflows"
readme = "README.md"
authors = [{name = "Syntasso", email="hello@syntasso.io"}]
license = "Apache-2.0"
keywords = ["kratix", "platform-engineering", "promises", "sdk"]
requires-python = ">=3.10"
dependencies = [
    "kubernetes >=33.0.0,<35",
    "PyYAML>=6.0.0,<7",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/syntasso/kratix-python"
Repository = "https://github.com/syntasso/kratix-python"
Source = "https://github.com/syntasso/kratix-python"
Documentation = "https://syntasso.github.io/kratix-python"
"Bug Tracker" = "https://github.com/syntasso/kratix-python/issues"
Changelog = "https://github.com/syntasso/kratix-python/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
 "ruff>=0.14.8",
 "pdoc>=15.0.0",
 "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "Q",  # flake8 ruleset
]
ignore = [
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.lint.per-file-ignores]
"__init__.py" = ["F401"] # module imported but unused
"tests/**/*" = ["E501"]  # line too long

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
publish-url = "https://pypi.org/legacy/"
explicit = true
